[gd_scene load_steps=2 format=3 uid="uid://djrel1vr6dvsd"]

[ext_resource type="Script" path="res://UI/SettingsWindow/settings.gd" id="1_pq2n3"]

[node name="SettingsWindow" type="PanelContainer"]
process_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -252.0
offset_top = -196.0
offset_right = 253.0
offset_bottom = 214.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pq2n3")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 2
color = Color(0.482353, 0.482353, 0.482353, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
layout_mode = 2
current_tab = 0
tab_focus_mode = 0

[node name="Game" type="VBoxContainer" parent="MarginContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/TabContainer/Game"]
visible = false
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="Cheats" type="CheckButton" parent="MarginContainer/TabContainer/Game/MarginContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
keep_pressed_outside = true
text = "Cheats"

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/TabContainer/Game"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="DistanceToCoin" type="CheckButton" parent="MarginContainer/TabContainer/Game/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_pressed = true
keep_pressed_outside = true
text = "Distance to coin"

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/TabContainer/Game"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="DistanceToStart" type="CheckButton" parent="MarginContainer/TabContainer/Game/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
button_pressed = true
keep_pressed_outside = true
text = "Distance to start position"

[node name="MarginContainer5" type="MarginContainer" parent="MarginContainer/TabContainer/Game"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 16

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Game/MarginContainer5"]
layout_mode = 2
text = "Aiming Point"

[node name="AimingPoint" type="OptionButton" parent="MarginContainer/TabContainer/Game/MarginContainer5"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
selected = 0
item_count = 2
popup/item_0/text = "On"
popup/item_1/text = "Off"
popup/item_1/id = 1

[node name="MarginContainer6" type="MarginContainer" parent="MarginContainer/TabContainer/Game"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 16

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Game/MarginContainer6"]
layout_mode = 2
text = "Aiming Point Color"

[node name="AimingPointColor" type="ColorPickerButton" parent="MarginContainer/TabContainer/Game/MarginContainer6"]
unique_name_in_owner = true
custom_minimum_size = Vector2(124.96, 24.92)
layout_mode = 2
size_flags_horizontal = 8
focus_mode = 0
flat = true
color = Color(1, 1, 0, 1)
edit_alpha = false

[node name="Other" type="VBoxContainer" parent="MarginContainer/TabContainer"]
visible = false
layout_mode = 2
theme_override_constants/separation = 12
metadata/_tab_index = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/TabContainer/Other"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/TabContainer/Other/MarginContainer2"]
layout_mode = 2
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/TabContainer/Other/MarginContainer2/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Camera Zoom"

[node name="CameraZoom" type="OptionButton" parent="MarginContainer/TabContainer/Other/MarginContainer2/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
focus_mode = 0
selected = 0
item_count = 3
popup/item_0/text = "1.0"
popup/item_1/text = "1.3"
popup/item_1/id = 1
popup/item_2/text = "1.5"
popup/item_2/id = 2

[node name="SaveAndExit" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
size_flags_stretch_ratio = 0.0
focus_mode = 0
theme_override_font_sizes/font_size = 40
text = "Save and exit"
